syntax = "proto3";

package resf.apollo.v1;

import "google/protobuf/wrappers.proto";

option go_package = "peridot.resf.org/apollo/pb;apollopb";

message Fix {
  google.protobuf.StringValue ticket = 1;
  google.protobuf.StringValue source_by = 2;
  google.protobuf.StringValue source_link = 3;
  google.protobuf.StringValue description = 4;
}
